--- a/canadaStepsAndTimeline.html
+++ b/canadaStepsAndTimeline.html
@@ -199,36 +199,191 @@
 
           <!-- Technical Skills Section Starts -->
           <section id="section2" class="col-md-12 col-sm-12 col-xs-12 px-1">
-			<table class="table">
-				<thead>
-				  <tr>
-					<th scope="col">#</th>
-					<th scope="col">First</th>
-					<th scope="col">Last</th>
-					<th scope="col">Handle</th>
-				  </tr>
-				</thead>
-				<tbody>
-				  <tr>
-					<th scope="row">1</th>
-					<td>Mark</td>
-					<td>Otto</td>
-					<td>@mdo</td>
-				  </tr>
-				  <tr>
-					<th scope="row">2</th>
-					<td>Jacob</td>
-					<td>Thornton</td>
-					<td>@fat</td>
-				  </tr>
-				  <tr>
-					<th scope="row">3</th>
-					<td>Larry</td>
-					<td>the Bird</td>
-					<td>@twitter</td>
-				  </tr>
-				</tbody>
-			  </table>
+
+            <div class="row">
+              <div class="col table-responsive">
+                <table class="table table-borderless">
+                  <thead>
+                    <tr>
+                    <th scope="col">Step</th>
+                    <th scope="col">Cost for one</th>
+                    <th scope="col">Cost for couple</th>
+                    <th scope="col">Time</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                    <td>French : A1</td>
+                    <td>13,080 Rs</td>
+                    <td>26,160 Rs</td>
+                    <td>
+                      <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Aug 3,2020 - Dec 15, 2020">5 months</a>
+                    </td>
+                    </tr>
+                    
+                    <tr>
+                      <td>French : A2</td>
+                      <td>13,080 Rs</td>
+                      <td>26,160 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Dec 15,2020 - Apr 15, 2021">5 months</a>
+                      </td>
+                    </tr>
+          
+                    <tr>
+                      <td>French : B1</td>
+                      <td>30,000 Rs</td>
+                      <td>60,000 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 15,2021 - Dec 15, 2021">7 months</a>
+                      </td>
+                    </tr>
+
+
+                    <tr>
+                      <td>Education Credential Assessment (ECA)</td>
+                      <td>25,000 Rs</td>
+                      <td>50,000 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Jan 1,2022 - Mar 1, 2022">3 months</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>IELTS</td>
+                      <td>13,250 Rs</td>
+                      <td>26,500 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Jan 1,2022 - Mar 1, 2022">3 months</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>TEF</td>
+                      <td>18,880 Rs</td>
+                      <td>37,760 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Jan 1,2022 - Mar 1, 2022">3 months</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Make express entry profile</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Mar 1, 2022">1 Day</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Wait for FSW draw</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Mar 1, 2022 - Apr 1, 2020">2 months</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Receive ITA</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 1, 2022">1 Day</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Police Clearence Certificate</td>
+                      <td> 1,000 Rs</td>
+                      <td> 2,000 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 1, 2022 - Apr 15, 2022">2 Weeks</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Medical Test</td>
+                      <td> 6,000 Rs</td>
+                      <td> 12,000 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 15, 2022">1 Day</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Proof of Funds</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 15, 2022">1 Day</a>
+                      </td>
+                    </tr>
+
+
+                    <tr>
+                      <td>Work Experience Letters</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 15, 2022">1 Day</a>
+                      </td>
+                    </tr>
+
+
+                    <tr>
+                      <td>Upload all documents in your application & pay</td>
+                      <td> 84,000 Rs</td>
+                      <td>1,57,000 Rs</td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 20, 2022">1 Day</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Medical exam passed & request for Biometrics</td>
+                      <td> - </td>
+                      <td> - </td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Apr 20, 2022 - May 20, 2022">1 month</a>
+                      </td>
+                    </tr>
+
+
+                    <tr>
+                      <td>Schedule Biometric appointment</td>
+                      <td> - </td>
+                      <td> - </td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="May 21, 2022">1 day</a>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>Get PR and submit passport for stamping</td>
+                      <td> - </td>
+                      <td> - </td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Jun 1, 2022 - Dec 1, 2022">6-9 month</a>
+                      </td>
+                    </tr>
+
+
+                    <tr class="font-weight-bold">
+                      <td>Total</td>
+                      <td> 1,78,130 Rs </td>
+                      <td> 3,97,580 Rs </td>
+                      <td>
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus" data-content="Aug 3, 2020 - Dec 1, 2022">29 months</a>
+                      </td>
+                    </tr>
+
+                  </tbody>
+                  </table>
+              </div>
+            </div>
+			
           </section>
           <!-- Technical Skills Section Ends -->
 
@@ -364,6 +519,28 @@
               setTheme('theme-dark');
           }
       }
+
+      // Immediately invoked function to set the theme on initial load
+      (function() {
+          if (localStorage.getItem('theme') === 'theme-light') {
+              setTheme('theme-light');
+              document.getElementById('slider').checked = true;
+          } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+              setTheme('theme-dark');
+              document.getElementById('slider').checked = false;
+          } else {
+              setTheme('theme-dark');
+              document.getElementById('slider').checked = false;
+          }
+      })();
+
+      $(function () {
+        $('[data-toggle="popover"]').popover()
+      })
+
+      $('.popover-dismiss').popover({
+          trigger: 'focus'
+      })
 
       // Full Screen
       function full_Screen_function() {
