--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                         <li><a href="./canadaStepsAndTimeline.html">Steps and Timeline</a></li>
                         <li><a href="./canadaCostBreakdown.html">Cost Breakdown</a></li>
                         <li><a href="./underDevelopment.html">Important Materials</a></li>
-                        <li><a href="./canadaIndiaCostOfLivingExpenseCompared.html">Cost of Living - comparison</a></li>
+                        <li><a href="./underDevelopment.html">Cost of Living - comparison</a></li>
+                        <!-- <li><a href="./canadaIndiaCostOfLivingExpenseCompared.html">Cost of Living - comparison</a></li> -->
                     </ul>
                 </li>
                 <li>
@@ -423,14 +424,14 @@
                         <div class="neumorphic-inset neumorphic-box col-md-3 col-sm-3 col-xs-12 text-center px-0 mx-sm-auto mt-2 mt-sm-0">
                             <div class="card bg-transparent ">
                                 <div class="card-header ">
-                                    <h5 class="d-inline ">Notes</h5>
+                                    <h5 class="d-inline ">Deluminator</h5>
                                 </div>
                                 <div class="card-body ">
-                                    <p class="card-text ">Note Taking app make using React, Firestore, Google Cloud Functions, Material UI</p>
+                                    <p class="card-text ">A way of guiding newcomers in IT</p>
                                 </div>
                                 <div class="card-footer row mx-0" style="font-size: large;">
-                                    <a href="https://github.com/shaantalk/Notes-App" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
-                                    <a href="https://github.com/shaantalk/Notes-App/fork" target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
+                                    <a href="https://github.com/shaantalk/Deluminator" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
+                                    <a href="https://github.com/shaantalk/Deluminator/fork" target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                 </div>
                             </div>
                         </div>
